--- a/app/Resources/views/landing/index.html.twig
+++ b/app/Resources/views/landing/index.html.twig
@@ -12,7 +12,7 @@
       <li class="list-group-item">{{raid.nom}}</li>
     </a>
     {% endfor %}
-    
+
     <a href= {{ path('create_raid') }}>
       <i class="fas fa-3x fa-plus-circle"></i>
     </a>
@@ -35,7 +35,7 @@
   {% for raid in all_raids %}
     <li class="list-group-item text-left">
       {{raid.nom}}
-      <a href= {{ path('post_benevole_one_raid', {'id_raid': raid.id, 'id_user': user.id}) }}>
+      <a href= {{ path('rejoindre_raid_comme_benevole', {'id_raid': raid.id, 'id_user': user.id}) }}>
         Rejoins-nous!
         <span class="glyphicon glyphicon-plus"></span>
       </a>
